# Reliable-MLOps

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.singlestage  MLOps_Project_Kickstart.md  docker-compose.yml  pyproject.toml  requirements-train.txt  requirements.txt
.github/workflows/: ci.yml
src/predictops/: app.py  data.py  registry.py  schemas.py  train.py
