[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "predictops"
version = "0.1.0"
description = "Production ML serving pipeline: CI eval gate, model registry, drift detection."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]
